--- a/index.css
+++ b/index.css
@@ -3,15 +3,15 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 14px;
 }
-body{
-    overflow: hidden;
+body {
+  overflow: hidden;
 }
 #header {
   border-bottom: 1px solid #d9d9d9;
   height: 60px;
   display: flex;
+  font-size: 14px;
 }
 #header button {
   background-color: white;
@@ -32,9 +32,9 @@ body{
   justify-content: center;
 }
 #nav button {
-    height: 100%;
-    width: 100px;
-    padding: 18px 10px 14px;
+  height: 100%;
+  width: 108px;
+  padding: 18px 10px 14px;
 }
 #logo-container button {
   /* padding: 16px 20px; */
@@ -78,14 +78,51 @@ body{
 #right-btns #getwordpress:hover {
   background-color: #213fd4;
 }
+#body {
+  display: flex;
+}
+#body #left h1 {
+  font-size: 70px;
+  font-family: serif;
+  font-weight: normal;
+}
+#right {
+  margin-left: 64px;
 
+  padding-top: 76px;
+  width: 50%;
+}
+#img-brush-container {
+  width: 60%;
+  height: auto;
+}
+#right #img-brush-container img {
+  width: 100%;
+  height: 100%;
+}
+#h1-container {
+  width: 70%;
+  text-align: left;
+  float: right;
+}
+#left p {
+  letter-spacing: 0.46px;
+  text-align: left;
+}
+#left #txt-content {
+  float: right;
+  width: 70%;
+}
+#left {
+  padding-top: 76px;
+  width: 50%;
+  text-align: right;
+}
 #arrow {
-  position: absolute;
-  top: 55%;
-  left: 100%;
-  transform: translate(-50%, -50%);
-  background-image: url("res/img/down-arrow.png");
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url("res/img/down-arrow.png") no-repeat;
   background-size: contain;
-  width: 30px;
-  height: 30px;
+  vertical-align: middle;
 }
