--- a/index.css
+++ b/index.css
@@ -4,8 +4,11 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
-body {
-  overflow: hidden;
+li,
+a {
+  color: black;
+  text-decoration: none;
+  list-style-type: none;
 }
 #header {
   border-bottom: 1px solid #d9d9d9;
@@ -13,14 +16,53 @@ body {
   display: flex;
   font-size: 14px;
 }
+#dropdown {
+  position: relative;
+}
+#dropdown-menu {
+  background-color: #f6f6f6;
+  border-radius: 4px;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  width: 200%;
+  padding: 16px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
+  pointer-events: none;
+}
+#dropdown-menu li {
+  padding: 16px 0;
+  font-size: 16px;
+}
+#dropdown-menu a {
+  display: block;
+  width: 100%;
+}
+#dropdown-menu a:hover {
+  text-decoration: underline;
+}
+#dropdown.active > #dropdown_btn + #dropdown-menu {
+  opacity: 1;
+  transition: opacity 0.5s;
+  transform: translateY(0px);
+  pointer-events: auto;
+}
 #header button {
   background-color: white;
   color: black;
   border: none;
   cursor: pointer;
 }
-
-#header button:hover {
+#dropdown.active button {
+  background-color: #f6f6f6;
+  transition: background-color 150ms ease-in-out;
+  text-decoration: underline;
+}
+#header button:hover,
+#dropdown:hover button {
   background-color: #f6f6f6;
 }
 #nav {
@@ -125,4 +167,109 @@ body {
   background: url("res/img/down-arrow.png") no-repeat;
   background-size: contain;
   vertical-align: middle;
+}
+
+#blank {
+  background-color: #ebebeb;
+  margin-top: 54px;
+  padding: 8px;
+  font-size: 12px;
+  display: flex;
+  justify-content: center;
+}
+#body2 {
+  padding-top: 75px;
+  background-color: #F6F6F6;
+  display: flex;
+  justify-content: center;
+  height: 600px;
+  letter-spacing: 1px;
+  line-height: 24px;
+}
+#content-1,
+#content-2,
+#content-3 {
+  margin: 0 40px;
+  width: 400px;
+  height: 100%;
+}
+
+#content-1 img,
+#content-2 img,
+#content-3 img {
+  border: 2px solid #d9d9d9;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  display: block;
+  margin-bottom: 12px;
+}
+
+#content-1 h2,
+#content-2 h2,
+#content-3 h2 {
+  font-weight: bold;
+  margin: 24px 0;
+}
+
+#body3 {
+  display: flex;
+  height: 500px;
+  align-items: center;
+  justify-content: center;
+  background-color: #F6F6F6;
+}
+
+#bd3-content1 {
+  padding-left: 200px;
+  width: 50%;
+}
+#bd3-content1 h1{
+  margin-bottom: 24px;
+}
+#bd3-content1 p {
+  margin-bottom: 24px;
+
+}
+#bd3-content2 {
+  height: 100%;
+  width: 50%;
+ display: flex;
+ align-items: center;
+}
+#bd3-content1 button {
+  cursor: pointer;
+  border: none;
+  border-radius: 2px;
+  height: 100%;
+  width: 108px;
+  padding: 18px 10px 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 20px;
+  font-weight: bold;
+  background-color: #3858e9;
+  width: 200px;
+  height: 40px;
+  color: white;
+}
+
+#bd3-content1 button:hover {
+  background-color: #213fd4;
+}
+#bd3-content2-img-container{
+  margin-left: 115px;
+  width: 75%;
+  height: 75%;
+  border: 2px solid #d9d9d9;
+  border-radius: 8px;
+}
+
+#bd3-content2-img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  display: block;
 }
