--- a/index.css
+++ b/index.css
@@ -48,7 +48,10 @@ a {
   opacity: 1;
   transition: opacity 0.5s;
   transform: translateY(0px);
-  pointer-events: auto;
+  /* pointer-events: auto; */
+}
+#dropdown_btn span {
+  pointer-events: none;
 }
 #header button {
   background-color: white;
@@ -120,125 +123,79 @@ a {
 #right-btns #getwordpress:hover {
   background-color: #213fd4;
 }
-#body {
-  display: flex;
-}
-#body #left h1 {
-  font-size: 70px;
-  font-family: serif;
-  font-weight: normal;
-}
-#right {
-  margin-left: 64px;
 
-  padding-top: 76px;
+#body-container {
+  display: flex;
+  /* padding: 140px; */
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+#body-content-1 {
+  display: flex;
+  /* gap: 64px; */
+  padding: 80px 160px;
+}
+
+#meet-wordpress-container,
+#blue-brush-container {
   width: 50%;
 }
-#img-brush-container {
-  width: 60%;
-  height: auto;
-}
-#right #img-brush-container img {
+
+#blue-brush-container img {
   width: 100%;
   height: 100%;
-}
-#h1-container {
-  width: 70%;
-  text-align: left;
-  float: right;
-}
-#left p {
-  letter-spacing: 0.46px;
-  text-align: left;
-}
-#left #txt-content {
-  float: right;
-  width: 70%;
-}
-#left {
-  padding-top: 76px;
-  width: 50%;
-  text-align: right;
-}
-#arrow {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: url("res/img/down-arrow.png") no-repeat;
-  background-size: contain;
-  vertical-align: middle;
+  object-fit: fill;
 }
 
 #blank {
   background-color: #ebebeb;
-  margin-top: 54px;
   padding: 8px;
   font-size: 12px;
   display: flex;
   justify-content: center;
-}
-#body2 {
-  padding-top: 75px;
-  background-color: #F6F6F6;
-  display: flex;
-  justify-content: center;
-  height: 600px;
-  letter-spacing: 1px;
-  line-height: 24px;
-}
-#content-1,
-#content-2,
-#content-3 {
-  margin: 0 40px;
-  width: 400px;
-  height: 100%;
+  width: 100%;
 }
 
-#content-1 img,
-#content-2 img,
-#content-3 img {
-  border: 2px solid #d9d9d9;
-  border-radius: 8px;
+#pic-containers {
+  display: flex;
+  justify-content: center;
+  gap: 64px;
+  width: 100%;
+  padding: 80px 160px;
+  height: 650px;
+  line-height: 24px;
+  letter-spacing: 1px;
+}
+
+#design-container,
+#build-container,
+#extend-container {
+  width: 33%;
+  height: 100%;
+}
+#design-card-1,
+#build-card-1,
+#extend-card-1 {
+  width: 100%;
+  height: auto;
+}
+#design-card-1 img,
+#build-card-1 img,
+#extend-card-1 img {
   width: 100%;
   height: 100%;
   object-fit: fill;
-  display: block;
-  margin-bottom: 12px;
+  border: 2px solid #d9d9d9;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
 }
-
-#content-1 h2,
-#content-2 h2,
-#content-3 h2 {
-  font-weight: bold;
-  margin: 24px 0;
-}
-
-#body3 {
+#swn-container {
   display: flex;
-  height: 500px;
-  align-items: center;
   justify-content: center;
-  background-color: #F6F6F6;
+  padding: 0 160px;
 }
-
-#bd3-content1 {
-  padding-left: 200px;
-  width: 50%;
-}
-#bd3-content1 h1{
-  margin-bottom: 24px;
-}
-#bd3-content1 p {
-  margin-bottom: 24px;
-
-}
-#bd3-content2 {
-  height: 100%;
-  width: 50%;
- display: flex;
- align-items: center;
-}
-#bd3-content1 button {
+#swn-container button {
   cursor: pointer;
   border: none;
   border-radius: 2px;
@@ -252,24 +209,95 @@ a {
   font-weight: bold;
   background-color: #3858e9;
   width: 200px;
-  height: 40px;
+  height: 50px;
   color: white;
 }
 
-#bd3-content1 button:hover {
+#swn-container button:hover {
   background-color: #213fd4;
 }
-#bd3-content2-img-container{
-  margin-left: 115px;
-  width: 75%;
-  height: 75%;
-  border: 2px solid #d9d9d9;
-  border-radius: 8px;
+#swn-content-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
 }
 
-#bd3-content2-img-container img {
+#swn-content-2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 500px;
+}
+
+#swn-content-2-img {
+  width: 80%;
+  height: 80%;
+}
+
+#swn-content-2-img img {
+  border: 2px solid #d9d9d9;
+  border-radius: 16px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
   width: 100%;
   height: 100%;
   object-fit: fill;
   display: block;
+}
+
+#platform-container {
+  background-color: #1e1e1e;
+  color: white;
+  padding: 0 160px;
+}
+#platform-container h1 {
+  font-size: 50px;
+  font-family: serif;
+  font-weight: normal;
+  letter-spacing: 1px;
+  margin-bottom: 32px;
+  padding-top: 80px;
+}
+#logos-container {
+  display: flex;
+}
+#logos-container > div {
+  width: 150px;
+  height: 90px;
+  margin: 50px 24px;
+}
+
+#logos-container > div img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+#samples {
+  background-color: #1e1e1e;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#samples > div {
+  padding-top: 24px;
+}
+
+#samples img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border: none;
+}
+
+#arrow {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background: url("res/img/down-arrow.png") no-repeat;
+  background-size: contain;
+  vertical-align: middle;
 }
