--- a/index.css
+++ b/index.css
@@ -48,7 +48,7 @@ a {
   opacity: 1;
   transition: opacity 0.5s;
   transform: translateY(0px);
-  /* pointer-events: auto; */
+  pointer-events: auto;
 }
 #dropdown_btn span {
   pointer-events: none;
@@ -273,7 +273,30 @@ a {
   height: 100%;
   object-fit: contain;
 }
+#explore-btn-container {
+  padding: 18px 0;
+}
+#explore-btn-container button {
+  cursor: pointer;
+  border: none;
+  border-radius: 2px;
+  height: 100%;
+  width: 108px;
+  padding: 18px 10px 14px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 16px 20px;
+  font-weight: bold;
+  background-color: #3858e9;
+  width: 200px;
+  height: 50px;
+  color: white;
+}
 
+#explore-btn-container button:hover {
+  background-color: #213fd4;
+}
 #samples {
   background-color: #1e1e1e;
   display: flex;
@@ -291,6 +314,98 @@ a {
   height: 100%;
   object-fit: contain;
   border: none;
+}
+
+#wordpress-community-container {
+  display: flex;
+  justify-content: center;
+  padding: 160px 160px;
+}
+#community-text-container {
+  width: 50%;
+}
+#community-text-container h2 {
+  font-size: 44px;
+  font-family: serif;
+  font-weight: normal;
+  letter-spacing: 1px;
+  margin-bottom: 32px;
+}
+#community-img-container {
+  padding-left: 48px;
+  width: 50%;
+}
+#community-text-container p {
+  width: 80%;
+  line-height: 24px;
+}
+#community-img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  border: none;
+}
+
+#footer {
+  padding: 64px 0;
+  display: flex;
+  justify-content: space-evenly;
+  background-color: #23282d;
+}
+#footer > div {
+  display: flex;
+  flex-direction: column;
+}
+
+#footer > div > a {
+  color: white;
+  padding: 8px 0;
+}
+
+#footer > div > a:hover {
+  text-decoration: underline;
+}
+#footer-2 {
+  display: flex;
+  align-items: center;
+}
+#logo-container-2 {
+  display: flex;
+  height: 40px;
+  width: 40px;
+}
+#logo-container-2 img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+#wordpressorg a, #wordpressorg span{
+  color: white;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 16px;
+}
+
+
+#footer-2{
+  display: flex;
+  justify-content: space-between;
+  padding: 24px;
+  color:white;
+  background-color: #23282d;
+}
+#social-logo-container {
+  display: flex;
+}
+#social-logo-container > div{
+  width: 25px;
+  height: 25px;
+  margin-right: 16px;
+}
+
+#social-logo-container > div img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 #arrow {
