--- a/index.css
+++ b/index.css
@@ -33,6 +33,21 @@ a {
   transition: opacity 150ms ease-in-out, transform 150ms ease-in-out;
   pointer-events: none;
 }
+#search-box {
+  display: none;
+}
+#search > div {
+  pointer-events: none;
+}
+#right-btns input[type="text"] {
+  width: 200px;
+  height: 30px;
+  border: none;
+  border-radius: 4px;
+  margin-right: 8px;
+  padding: 0 8px;
+}
+
 #dropdown-menu li {
   padding: 16px 0;
   font-size: 16px;
@@ -379,40 +394,52 @@ a {
   height: 100%;
   object-fit: fill;
 }
-#wordpressorg a, #wordpressorg span{
+#wordpressorg a,
+#wordpressorg span {
   color: white;
   font-family: "Times New Roman", Times, serif;
   font-size: 16px;
 }
 
-
-#footer-2{
+#footer-2 {
   display: flex;
   justify-content: space-between;
   padding: 24px;
-  color:white;
+  color: white;
   background-color: #23282d;
 }
 #social-logo-container {
   display: flex;
 }
-#social-logo-container > div{
+#social-logo-container > div {
   width: 25px;
   height: 25px;
   margin-right: 16px;
 }
 
-#social-logo-container > div img{
+#social-logo-container > div img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
 
-#arrow {
+#down-arrow {
+  pointer-events: none;
+  border: solid black;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 3px;
+  margin-left: 5px;
+  margin-bottom: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
+
+/* #arrow {
   display: inline-block;
   width: 20px;
   height: 20px;
   background: url("res/down-arrow.png") no-repeat;
   background-size: contain;
   vertical-align: middle;
-}
+} */
