--- a/showcase.css
+++ b/showcase.css
@@ -330,6 +330,7 @@ a {
   font-size: 1.2rem;
 }
 #fc-1 button, #fc-2 button{
+  font-weight: bold;
   cursor: pointer;
   margin-top: 24px;
   width: 150px;
