--- a/PhotoDirectory.css
+++ b/PhotoDirectory.css
@@ -13,7 +13,9 @@ a {
 /*----------------------------------------------------------------- HEADER START -----------------------------------------------------------------*/
 #header {
   background-color: #23282d;
-
+  z-index: 1;
+  width: 100%;
+  position: fixed;
   height: 60px;
   display: flex;
   font-size: 14px;
@@ -78,7 +80,22 @@ a {
 #nav {
   display: flex;
 }
+#search > div {
+  pointer-events: none;
+}
 
+#search-box {
+  display: none;
+}
+
+#right-btns input[type="text"] {
+  width: 200px;
+  height: 30px;
+  border: none;
+  border-radius: 4px;
+  margin-right: 8px;
+  padding: 0 8px;
+}
 #logo-container {
   display: flex;
   justify-content: center;
@@ -97,7 +114,7 @@ a {
 
 #logo-container img {
   /* height: 100%;
-      width: auto; */
+		width: auto; */
   margin-top: 7px;
   height: 40px;
   width: 40px;
@@ -131,13 +148,16 @@ a {
   background-color: #213fd4;
 }
 
-#arrow {
+#down-arrow {
+  pointer-events: none;
+  border: solid white;
+  border-width: 0 2px 2px 0;
   display: inline-block;
-  width: 20px;
-  height: 20px;
-  background: url("res/down-arrow-white.png") no-repeat;
-  background-size: contain;
-  vertical-align: middle;
+  padding: 3px;
+  margin-left: 5px;
+  margin-bottom: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
 }
 
 /*----------------------------------------------------------------- HEADER END -----------------------------------------------------------------*/
@@ -145,96 +165,95 @@ a {
 /*----------------------------------------------------------------- BODY START -----------------------------------------------------------------*/
 
 #FirstBanner {
-	width:100%;
-	height:380px;
-	background-color:#3858e9;
+  width: 100%;
+  height: 380px;
+  background-color: #3858e9;
 }
 
-#Title{
-	text-align:center;
-	color:white;
-	padding-top:60px;
+#Title {
+  text-align: center;
+  color: white;
+  padding-top: 60px;
 }
 
 #SubTitle {
-	text-align:center;
-	color:#d3dafa;
-	font-size:23px;
-	padding-top:5px;
+  text-align: center;
+  color: #d3dafa;
+  font-size: 23px;
+  padding-top: 5px;
 }
 
 #searchBox {
-	text-align:center;
-	padding-top:30px;
-	display:flex;
-	margin-left:540px;
-	border:none;
+  text-align: center;
+  padding-top: 30px;
+  display: flex;
+  margin-left: 540px;
+  border: none;
 }
 
-input[type="text"],
+#searchBox input[type="text"],
 select {
-    width: 37%; 
-	height:50px;
-    padding: 10px; 
-    margin-bottom: 10px; 
-	font-size:20px;
-	border:none;
-
+  width: 37%;
+  height: 50px;
+  padding: 10px;
+  margin-bottom: 10px;
+  font-size: 20px;
+  border: none;
 }
 
-#search {
-	padding-top:1px;
-	height:50px;
-	width:6%;
-	background-color:white;
-	border:none;
-
+#search-2 {
+  padding-top: 1px;
+  height: 50px;
+  width: 6%;
+  background-color: white;
+  border: none;
 }
-
+#search-2:hover {
+  cursor: pointer;
+}
 #lowerText {
-	display:flex;
+  display: flex;
 }
 
 #firstText {
-	color:#d3dafa;
-	font-size:23px;
-	padding-top:13px;
-	margin-left:577px;
+  color: #d3dafa;
+  font-size: 23px;
+  padding-top: 13px;
+  margin-left: 577px;
 }
 
 #lowerText a {
-	color:#d3dafa;
-	font-size:23px;
-	font-weight:bold;
-	padding-top:13px;
-	margin-left:10px;
-	text-decoration:underline;
+  color: #d3dafa;
+  font-size: 23px;
+  font-weight: bold;
+  padding-top: 13px;
+  margin-left: 10px;
+  text-decoration: underline;
 }
 
 #lowerText a:hover {
-	opacity: 0.8;
-	cursor: pointer;
-	color:black;
+  opacity: 0.8;
+  cursor: pointer;
+  color: black;
 }
 
 #LastText {
-	color:#d3dafa;
-	font-size:23px;
-	padding-top:13px;
-	margin-left:10px;
+  color: #d3dafa;
+  font-size: 23px;
+  padding-top: 13px;
+  margin-left: 10px;
 }
 
 #background {
-	width:100%;
-	background-color:#ffffff;
-	color: #0073aa;
-	position:relative;
+  width: 100%;
+  background-color: #ffffff;
+  color: #0073aa;
+  position: relative;
 }
 
 #photo {
   width: 20%;
   margin: 12px 12px;
-  
 }
 #photo img {
   cursor: pointer;
@@ -244,81 +263,76 @@ select {
   transition: border 0.2s ease-in-out;
   transition: transform 0.2s ease-in-out;
 }
-#photo img:hover{
+#photo img:hover {
   cursor: pointer;
   border: 2px solid #0073aa;
-  transform: scale(.99);
+  transform: scale(0.99);
 }
 #photo-row-cont {
   display: flex;
   width: 100%;
   justify-content: center;
 }
-#photos-container{
+#photos-container {
   margin-top: 64px;
 }
 #seeMore {
-	font-size:19px;
-	padding-top:32px;
-	margin-left:1100px;
+  font-size: 19px;
+  padding-top: 32px;
+  margin-left: 1100px;
 }
 
 #seeMore a {
-	color:#0073aa;
+  color: #0073aa;
 }
 #seeMore:hover {
-	opacity: 0.8;
-	cursor: pointer;
-	text-decoration:underline;
-	color:#0073aa;
+  opacity: 0.8;
+  cursor: pointer;
+  text-decoration: underline;
+  color: #0073aa;
 }
 
-#endingInfo{
-	padding-top:60px;
-	display:flex;
-	padding-left:220px;
+#endingInfo {
+  padding-top: 60px;
+  display: flex;
+  padding-left: 220px;
   margin-bottom: 24px;
 }
 
 #Contribute {
-	width:30%;
-	
+  width: 30%;
 }
 
 #ConTitle {
-	font-size:37px;
-	padding-bottom:10px;
-	color:#0073aa;
+  font-size: 37px;
+  padding-bottom: 10px;
+  color: #0073aa;
 }
 
 #License {
-	width:30%;
+  width: 30%;
 }
 
 #LicTitle {
-	font-size:37px;
-	padding-bottom:10px;
-	color:#0073aa;
+  font-size: 37px;
+  padding-bottom: 10px;
+  color: #0073aa;
 }
 
 #FAQTitle {
-	font-size:37px;
-	padding-bottom:10px;
-	color:#0073aa;
+  font-size: 37px;
+  padding-bottom: 10px;
+  color: #0073aa;
 }
 
 #FAQ {
-	width:30%;
+  width: 30%;
 }
 
 #Content {
-	width:87%;
-	line-height:25px;
+  width: 87%;
+  line-height: 25px;
 }
-
-
-
-
 
 /*----------------------------------------------------------------- BODY END -----------------------------------------------------------------*/
 
