chore: :memo: Added blocks webpage under extend dropdown

--- a/about.css
+++ b/about.css
@@ -588,6 +588,11 @@ a {
   line-height: 50px;
 }
 
+#aboutlastcont a:hover{
+  text-decoration: underline;
+  text-underline-offset: 1px;
+}
+
 #aboutlastcont #leftyyy p{
   border-bottom: 1px solid black;
 }
